newPassword change to password
